fix(lightbox): fix lightbox z-index

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -36,7 +36,9 @@ body {
     margin: 0;
     margin: 1px 1px 1px 1px;
     &.portal-activated {
-      overflow-y: scroll;
+      .lightbox {
+        z-index: -1;
+      }
     }
   }
 }
@@ -65,7 +67,7 @@ body {
   position: fixed;
   top: 0px;
   left: 0;
-  z-index: 1;
+  z-index: -1;
 }
 
 portal {
